blbnou mi balicky a mysql server phpmyadmin

--- a/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/appsettings.json
+++ b/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/appsettings.json
@@ -1,9 +1,3 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "DefaultConnection": "server=localhost;database=4c1_uhrinpatrik_db1;user=uhrinpatrik;password=123456;"
 }
