--- a/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/evidence-zavad-uhrin.csproj
+++ b/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/evidence-zavad-uhrin.csproj
@@ -7,4 +7,9 @@
     <RootNamespace>evidence_zavad_uhrin</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.9" />
+  </ItemGroup>
+
 </Project>
