--- a/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/appsettings.json
+++ b/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/appsettings.json
@@ -1,3 +1,10 @@
 {
-  "DefaultConnection": "server=localhost;database=4c1_uhrinpatrik_db1;user=uhrinpatrik;password=123456;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
+
