--- a/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/evidence-zavad-uhrin.csproj
+++ b/src/EvidenceZavadMistnosti/evidence-zavad-uhrin/evidence-zavad-uhrin.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.9" />
   </ItemGroup>
 
